# circleci-workflow-dashboard

./: .gitignore  Dockerfile  README.md  app.py  bar.py  circleci.py  foo.py  go.mod  go.sum  main.go  pyproject.toml
.circleci/: config.yml
assets/: refresh.js  styles.css
circleci/: circleci.go  circleci_suite_test.go  circleci_test.go  filters.go  jobs.go  mock_circleci_response_test.go  mock_circleci_test.go  pipelines.go  pipelines_test.go  projects.go  projects_test.go  workflows.go  workflows_test.go
dashboard/: dashboard.go  dashboard_suite_test.go  dashboard_test.go
mocks/: CircleCI.go
scripts/: docker_build.sh
templates/: dashboard.html  dashboard.tmpl
tests/: circleci_test.py  conftest.py
