[tool.poetry]
name = "circleci-workflow-dashboard"
version = "0.1.0"
description = ""
authors = ["Sam Bryant <srbry@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
flask = "^1.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
