[tool.poetry]
name = "circleci-workflow-dashboard"
version = "0.1.0"
description = ""
authors = ["Sam Bryant <srbry@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.22.0"
twisted = "^19.10.0"
jinja2 = "^2.11.1"

[tool.poetry.dev-dependencies]
requests-mock = "^1.7.0"
pytest = "^5.3.5"
pytest-mock = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
